--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "clsx": "^2.1.1",
     "geist": "^1.3.1",
     "lucide-react": "^0.469.0",
-    "next": "canary",
+    "next": "^15.1.*",
     "next-themes": "^0.4.4",
     "react": "^19.0.*",
     "react-dom": "^19.0.*",
