--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,6 @@ PROXY_SERVER=
 PROXY_TLS_SERVER_NAME=
 PROXY_TLS_PUBLIC_KEY=
 PROXY_TLS_SHORT_ID=
+PROXY_PING_URL=
 
 PROXY_ALLOWED_CLIENT_UUIDS=1234-1234-1234-1234-1234,1234-1234-1234-1234-1234,1234-1234-1234-1234-1234
