--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.1.1",
     "geist": "^1.3.1",
     "lucide-react": "^0.469.0",
+    "net": "^1.0.2",
     "next": "^15.1.*",
     "next-themes": "^0.4.4",
     "react": "^19.0.*",
