Added shadowsocks protocol as an option

--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,7 @@ PROXY_TLS_SERVER_NAME=
 PROXY_TLS_PUBLIC_KEY=
 PROXY_TLS_SHORT_ID=
 
+PROXY_SHADOWSOCKS_METHOD=
+PROXY_SHADOWSOCKS_PORT=
+
 PROXY_ALLOWED_CLIENT_UUIDS=1234-1234-1234-1234-1234,1234-1234-1234-1234-1234,1234-1234-1234-1234-1234
