data driven server names

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ PROXY_SERVER=
 PROXY_TLS_SERVER_NAME=
 PROXY_TLS_PUBLIC_KEY=
 PROXY_TLS_SHORT_ID=
+NEXT_PUBLIC_SERVER_NAMES=
 
 PROXY_SHADOWSOCKS_METHOD=
 PROXY_SHADOWSOCKS_PORT=
